/*
 * $Id: ChangeLog,v 1.152 2002/04/16 16:16:35 map Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-04-16 17:28 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/fastitem.c
    ! Optimized hb_itemPutC() and hb_itemPutCL() so that all strings of single character are now offsets
      into one shared static table of all ASCII chars.
  * source/vm/hvm.c
    + Added support for strings as array of characters. Now any string expression may be indexed:

       cVar := "Hello"
       cVar[1] => 'H'

      This kind of indexing is much faster than using SubStr( cVar, 1, 1 )

    + Added support for HB_P_RIGHT - Optimization of Right( x, n ) is now complete.

  * include/hbexprb.c
    + Optimization of Right( x, n ) to use new HB_P_RIGHT.
    + Added Automatic optimization of SubStr( x, n, 1 ) (where the len is 1) to x[n] which is much faster.

  /* The above optimization of SubStr() with the following test:

        Procedure Main

          LOCAL nStart := Seconds(), Counter, cString := "Hello", cChar

          FOR Counter := 1 to 1000000
             cChar := SubStr( cString, 1, 1 ) // Same as cChar := cString[1]
          NEXT

          ? ( Seconds() - nStart )

        Return

     Produced the following timing:

        Harbour  : 17.15 Sec.
        xHarbour :  1.25 Sec.

  */

2002-04-16 18:00 UTC+0100 Marek Paliwoda <paliwoda@inetia.pl>
  * make_gnu.sh
  * config/linux/gcc.cf
  * doc/en/gtslang.txt
  * source/rtl/gtsln/Makefile
  * source/rtl/gtsln/gtsln.c
  * source/rtl/gtsln/gtsln.h
  * source/rtl/gtsln/kbsln.c
  * source/rtl/gtsln/mousesln.c
  * source/rtl/gtsln/termtype.c
    + Added gpm mouse support on linux console
    * Fixed mouse support under xterm

2002-04-14 22:01 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * doc/inline_c.txt
    * Minor correction.

  * include/hbapi.h