@@ -1,5 +1,5 @@
 /*
- * $Id: hvm.c,v 1.48 2002/04/17 00:35:43 ronpinkas Exp $
+ * $Id: hvm.c,v 1.49 2002/04/17 00:52:51 ronpinkas Exp $
  */
 
 /*
@@ -238,6 +238,8 @@ int hb_vm_iExtraIndex;
 static USHORT   s_uiActionRequest;
 
 static int s_iBaseLine;
+
+char *hb_vm_sNull = "";
 
 unsigned char hb_vm_acAscii[256][2] = { { 0x00, 0 }, { 0x01, 0 }, { 0x02, 0 }, { 0x03, 0 }, { 0x04, 0 }, { 0x05, 0 }, { 0x06, 0 }, { 0x07, 0 }, { 0x08, 0 }, { 0x09, 0 }, { 0x0A, 0 }, { 0x0B, 0 }, { 0x0C, 0 }, { 0x0D, 0 }, { 0x0E, 0 }, { 0x0F, 0 },
                                    { 0x10, 0 }, { 0x11, 0 }, { 0x12, 0 }, { 0x13, 0 }, { 0x14, 0 }, { 0x15, 0 }, { 0x16, 0 }, { 0x17, 0 }, { 0x18, 0 }, { 0x19, 0 }, { 0x1A, 0 }, { 0x1B, 0 }, { 0x1C, 0 }, { 0x1D, 0 }, { 0x1E, 0 }, { 0x1F, 0 },
@@ -3266,18 +3268,32 @@ static void hb_vmArrayPush( void )
    }
    else if( HB_IS_STRING( pArray ) )
    {
-      if( ulIndex > 0 && ulIndex <= pArray->item.asString.length )
+      if( (long) ulIndex > 0 )
       {
-         hb_stackPop();
+         ulIndex--;
+      }
+      else if( (long) ulIndex < 0 )
+      {
+         (long) ulIndex += pArray->item.asString.length;
 
+         if( (long) ulIndex < 0 )
+         {
+            ulIndex = 0;
+         }
+      }
+
+      hb_stackPop();
+
+      if( ulIndex < pArray->item.asString.length )
+      {
          if( pArray->item.asString.bStatic )
          {
-            pArray->item.asString.value  = (char *) ( hb_vm_acAscii[ (int) ( pArray->item.asString.value[ulIndex - 1] ) ] );
+            pArray->item.asString.value  = (char *) ( hb_vm_acAscii[ (int) ( pArray->item.asString.value[ulIndex] ) ] );
             pArray->item.asString.length = 1;
          }
          else
          {
-            unsigned char cChar = pArray->item.asString.value[ulIndex - 1];
+            unsigned char cChar = pArray->item.asString.value[ulIndex];
 
             hb_itemReleaseString( pArray );
 
@@ -3288,7 +3304,13 @@ static void hb_vmArrayPush( void )
       }
       else
       {
-         hb_errRT_BASE( EG_BOUND, 1132, NULL, hb_langDGetErrorDesc( EG_ARRACCESS ), 2, pArray, pIndex );
+         if( ! pArray->item.asString.bStatic )
+         {
+            hb_itemReleaseString( pArray );
+         }
+
+         pArray->item.asString.value  = hb_vm_sNull;
+         pArray->item.asString.length = 0;
       }
    }
    else
